--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
     "title": "Angular APP",
-    "description": "This is POC Angular project"
+    "description": "This is POC Angular project",
+    "test": "Another test string"
 }
