Update source file en.json

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,4 @@
 {
     "title": "Angular APP",
-    "description": "This is POC Angular project",
-    "test": "Another test string"
+    "description": "This is POC Angular project"
 }
