--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,5 +2,6 @@
     "title": "Angular APP",
     "description": "This is POC Angular project",
     "test": "Another test string",
-    "header": "Header"
+    "header": "Header",
+    "footer": "Footer"
 }
