--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,7 @@
 {
     "title": "Angular APP",
     "description": "This is POC Angular project",
-    "test": "Another test string"
+    "test": "Another test string",
+    "header": "Header",
+    "footer": "Footer"
 }
