--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,5 +6,6 @@
     "section": "Section",
     "choose-lang": "Choose language",
     "nav-option-1": "Option 1",
-    "nav-option-2": "Option 2"
+    "nav-option-2": "Option 2",
+    "footer": "Footer"
 }
